--- a/app_deployement/nginx-deployment.yaml
+++ b/app_deployement/nginx-deployment.yaml
@@ -4,12 +4,18 @@ kind: Deployment
 metadata:
   labels:
     app: app1
+    version: '1.0'
+    env: prod
   name: app1
+  namespace: app1
 spec:
-  replicas: 5
+  replicas: 2
   selector:
     matchLabels:
       app: app1
+    matchExpressions:
+      - { key: podEnv, operator: NotIn, values: ['staging', 'dev'] }
+      - { key: status, operator: In, values: ['enabled'] }
   strategy:
     rollingUpdate:
       maxSurge: 1
@@ -18,16 +24,9 @@ spec:
     metadata:
       labels:
         app: app1
+        podEnv: prod
+        status: enabled
     spec:
-    #  initContainers:
-    #  - name: client-db
-    #    image: mariadb:10.4
-    #    env:
-    #    - name: ROOT_PASSWORD
-    #      value: 'password'
-    #    command: ['sh', '-c',
-    #      'until mysqladmin ping -h mariadb -p 3306;
-    #		do echo waiting for database; sleep 2; done']
       containers:
       - name: php73fpm
         image: php:7.3-fpm
@@ -37,16 +36,36 @@ spec:
         ports:
           - name: php73
             containerPort: 9000
+        readinessProbe:
+          tcpSocket:
+            port: 9000
+        livenessProbe:
+          tcpSocket:
+            port: 9000
+
       - name: nginx
-        image: nginx:1.18
+        image: nginx:1.19
         ports:
           - name: nginx-http
             containerPort: 80
+          - name: nginx-https
+            containerPort: 443
+        env:
+          - name: FORMATION
+            value: 'kubernetes'
+        livenessProbe:
+          tcpSocket:
+            port: 80
+        readinessProbe:
+          tcpSocket:
+            port: 80
         volumeMounts:
         - name: www
           mountPath: /usr/share/nginx/html
         - name: conf
           mountPath: /etc/nginx/conf.d/
+      nodeSelector:
+        nodeEnv: prod
       volumes:
       - name: conf
         hostPath:
@@ -56,3 +75,5 @@ spec:
         hostPath:
           path: /kube/www
           type: Directory
+      - name: www-nginx
+        emptyDir: {}
